MDEV-4859 Wrong value and data type of "SELECT MAX(time_column) + 1 FROM t1" Fixed.